objects/project_cloud__KPI_Schedule__c.object
<CustomObject>
    <description>Object for capturing KPI information for a given time period.</description>
    <fields>
        <fullName>project_cloud__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__KPI__c</fullName>
        <inlineHelpText>The parent KPI</inlineHelpText>
        <label>KPI</label>
        <referenceTo>project_cloud__KPI__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Type__c</fullName>
        <inlineHelpText>The type of KPI (Planned, Actual, Forecast)</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Actual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>KPI Schedule</label>
    <nameField>
        <displayFormat>KS-{00000000}</displayFormat>
        <label>KPI Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>